# compact-tree

./: .editorconfig  .gitattributes  .gitignore  BENCHMARK_RESULTS.md  BUILD.md  BUILD_QUICK.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  OPTIMIZATIONS.md  README.md  SECURITY.md  _marisa_ext.c  _marisa_ext.pyi  build_cooccurrence.py  compact_tree.py  corpus.txt  download_large_corpus.py  examples.py  generate_compile_commands.py  louds.py  marisa_trie.py  profile_compact_tree.py  profile_marisa.py  profile_synthetic.py  pyproject.toml  requirements-dev.txt  run_benchmarks.py  setup.py  test_compact_tree.py  test_marisa_trie.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  publish.yml  tests.yml
