[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "savov-compact-tree"
version = "2.1.0"
description = "Compact, read-only nested dictionary backed by a DAWG-style radix trie"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Andrey Savov", email = "savov@hotmail.com"}
]
keywords = ["data-structures", "trie", "dawg", "compression", "compact-tree"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "bitarray>=2.0.0",
    "fsspec>=2021.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.60.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/andrey-savov/compact-tree"
Repository = "https://github.com/andrey-savov/compact-tree"
Issues = "https://github.com/andrey-savov/compact-tree/issues"

[tool.setuptools]
py-modules = ["compact_tree", "marisa_trie"]

[tool.pytest.ini_options]
testpaths = ["test_compact_tree.py", "test_marisa_trie.py"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["compact_tree", "marisa_trie"]
omit = ["test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.cibuildwheel]
# Build for CPython 3.9–3.13; skip 32-bit and musl targets
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
# Run the test suite after each wheel build
test-requires = ["pytest", "bitarray", "fsspec"]
test-command = "pytest {project}/test_compact_tree.py {project}/test_marisa_trie.py -x -q"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
# archs are set per-runner via CIBW_ARCHS_MACOS in the workflow matrix
# (macos-13 → x86_64, macos-latest/arm64 → arm64)

[tool.cibuildwheel.windows]
archs = ["AMD64"]

